# docs/swagger.json
@@ -1,7 +1,7 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "Torrent server with a REST API.",
+        "description": "Torrent server with a REST API",
         "title": "Torrest API",
         "contact": {
             "name": "i96751414",
@@ -9,8 +9,8 @@
             "email": "i96751414@gmail.com"
         },
         "license": {
-            "name": "GPL3.0",
-            "url": "https://www.gnu.org/licenses/gpl-3.0.html"
+            "name": "MIT",
+            "url": "https://github.com/i96751414/torrest/blob/master/LICENSE"
         },
         "version": "1.0"
     },
